                          WebAuth Change History

WebAuth 3.2.1 (in progress)

 *) Add WebAuthPostReturnURL directive to allow an app to deal with 
    handling a POST that didn't have authentication.

 *) Make sure ident_set_authflag call is made after ident_set_authtype
    call.

 *) Corrected handling of successful S/Ident calls returning errors in
    mod_webkdc when debugging is turned off.

 *) Remove some unnecessary debugging code in mod_webkdc.

 *) Fixed an incorrect handling of a string transformation in the attrs
    code, likely only affecting a test failure on Tru64.

 *) Improve the handling of the configure probes to include the right
    prerequisites for Kerberos checks and to probe for libz before cURL.

WebAuth 3.2.0 (2003-08-07)

 *) Added S/Ident support to weblogin and the WebKDC.

 *) Added a preliminary port to Windows.  See windows/BUILD.txt for more
    information.

 *) Fixed bug when handling sub-requests (like in mod_autoindex).  Make
    sure to stash notes in the top-most main request.

 *) Add new WebKDC commands webkdcProxyToken and webkdcProxyTokenInfo.

 *) Add three new functions to libwebauth: webauth_krb5_init_via_cache
    and webauth_krb5_{mk,rd}_req_with_data.

 *) Removed WebAuthProxyHeaders directive.  Added new documentation
    to mod_webauth.xml that recommends people use mod_headers instead.
    See "Using WebAuth with Proxy Servers" in that document.

 *) Modified WebAuthDontCache so it also adds "Pragma: no-cache" and
    "Cache-Control: no-cache" headers in addition to the "Expires" header.

 *) Modified WebAuthDoLogout so when it is enabled so is WebAuthDontCache.

 *) When returning redirects, make sure to set r->header_only so there
    is no extra content generated by Apache.  Also set the same
    Expires, Pragma, and Cache-Control headers that WebAuthDontCache sets.

 *) Increased robustness of the privgroup handling in mod_webauthldap when